--- a/quiz/st.css
+++ b/quiz/st.css
@@ -273,6 +273,10 @@ header {
 #logo {
     width: 87%;
 }
+
+.we {
+      font-size: 14px;
+}
 .menu-toggle span {
     height: 3px;
     width: 40px;
