--- a/list/st.css
+++ b/list/st.css
@@ -123,7 +123,10 @@ p {
         line-height: 40px;
         height: 10px;
     }
-
+    .we {
+        font-size: 14px;
+    }
+    
     .navItem {
         display: none;
         flex-direction: column;
